# kubernetes-bootcamp

./: .gitignore  README.md  SETUP.md  WELCOME.md  helmfile.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
apps/postgres/: Chart.yaml  values.yaml
apps/postgres/templates/: deployment.yaml  pvc.yaml  secret.yaml  service.yaml
apps/resource-quota/: quota.yaml
docs/: e2e-test.md  lens.md  live-sessions.md  project-ideas.md
examples/cronjob/: README.md
examples/cronjob/k8s/: cronjob.yaml
examples/data-pipeline/: README.md  airflow-values.yaml
examples/data-pipeline/dags/: example_pipeline.py
examples/nextjs-app/: .dockerignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
examples/nextjs-app/app/: layout.tsx  page.tsx
examples/nextjs-app/app/api/health/: route.ts
examples/nextjs-app/k8s/: deployment.yaml  ingress.yaml  service.yaml
examples/troubleshooting/: README.md
examples/troubleshooting/k8s/: crashloopbackoff.yaml  imagepullbackoff.yaml  probe-fail.yaml
examples/web-service/: Dockerfile  README.md  app.py
examples/web-service/k8s/: deployment.yaml  ingress.yaml  service.yaml
scripts/: init-cohort-namespaces.sh
