[project]
name = "k8s-kata"
version = "0.1.0"
description = "Kubernetes Bootcamp lab — deploy your own data pipeline or app on K8s."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

# Dev deps let you author/lint DAGs locally before they run in the cluster.
[dependency-groups]
dev = [
    "apache-airflow>=3.1.0",
    "pandas>=2.3.2",
    "requests>=2.32.5",
]

# The web example pins its own deps in examples/web-service/Dockerfile.
